--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,13 @@
             <artifactId>mockito-core</artifactId>
             <version>1.9.5</version>
         </dependency>
+    
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>classes12</artifactId>
+            <version>10.2.0.2.0</version>
+            <type>pom</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
