--- a/pom.xml
+++ b/pom.xml
@@ -154,8 +154,9 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>3.1.3.RELEASE</version>
-        </dependency>   
-        <!--hibernate-->    
+        </dependency> 
+          
+        <!--  **************** hibernate ******************-->    
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-c3p0</artifactId>
