Ajout du module document(Classe Document)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,8 @@ ava.oracle.password = ava
 ref.oracle.username = ref
 ref.oracle.password = ref
 
+#GEN properties
+gen.oracle.username = gen
+gen.oracle.password = gen
 
 
