--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,12 @@ ref.oracle.password = ref
 gen.oracle.username = gen
 gen.oracle.password = gen
 
+#TRE properties
+gen.oracle.username = tre
+gen.oracle.password = tre
+
+#SECURITE properties
+gen.oracle.username = securite
+gen.oracle.password = sec
+
 
